# miners

./: Cargo.toml  README.md
crates/miners-protocol/: Cargo.toml
crates/miners-protocol/src/: handler.rs  lib.rs  packet.rs
crates/miners-protocol/src/packets/: handshake.rs  login.rs  mod.rs  status.rs
crates/miners-protocol/src/utils/: location.rs  mod.rs  nbt.rs  slot.rs
crates/miners-test/: Cargo.toml
crates/miners-test/src/: main.rs
src/: client.rs  lib.rs
src/events/: basic.rs  mod.rs
src/handlers/: basic.rs  chat.rs  mod.rs
src/plugins/: basic.rs
